# DTime

./: .gitignore  .pnp.cjs  LICENSE.txt  README.md  bun.lockb  package.json  tailwind.config.js
.github/: CODEOWNERS
.github/workflows/: publish.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculations.rs  lib.rs  main.rs
