[package]
name = "dtime"
version = "1.0.1"
description = "DTime"
authors = ["Sebastian Steffensen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dtime_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri-plugin-http = { version = "2.0.0-rc.0", features = ["blocking"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
tauri-plugin-fs = "2.0.0-rc.0"
cfspeedtest = "1.2.5"
